bootstrap and css on email

--- a/mail/static/mail/styles.css
+++ b/mail/static/mail/styles.css
@@ -1,3 +1,11 @@
 textarea {
     min-height: 400px;
 }
+
+.read{
+    background-color: rgb(164, 159, 170);
+}
+
+.unread{
+    background-color: aquamarine;
+}
