--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -30,7 +30,7 @@
                 <input class="form-control" id="compose-subject" placeholder="Subject">
             </div>
             <textarea class="form-control" id="compose-body" placeholder="Body"></textarea>
-            <input type="submit" class="btn btn-primary"/>
+            <input type="submit" class="btn btn-primary my-4"/>
         </form>
     </div>
 {% endblock %}
